--- a/index.html
+++ b/index.html
@@ -631,7 +631,8 @@
 					}
 					return {
 						StorageGetter:StorageGetter,
-						StorageSetter:StorageSetter
+						StorageSetter:StorageSetter,
+						getJSONP:getJSONP
 					}
 				})();
 
