--- a/index.html
+++ b/index.html
@@ -631,8 +631,7 @@
 					}
 					return {
 						StorageGetter:StorageGetter,
-						StorageSetter:StorageSetter,
-						getJSONP:getJSONP
+						StorageSetter:StorageSetter
 					}
 				})();
 
