--- a/index.html
+++ b/index.html
@@ -639,6 +639,8 @@
 
 				var Win = $(window);
 				var Doc = $(document);
+				var readerModel;
+				var readerUI;
 				var RootContainer = $('#fiction_container');
 				var initFontSize = Util.StorageGetter('font_size');
 				initFontSize = parseInt(initFontSize);
@@ -649,8 +651,8 @@
 
 				function main(){
 					//todo 整个项目的入口函数
-					var readerModel = ReaderModel();
-					var readerUI = ReaderBaseFrame(RootContainer);
+					readerModel = ReaderModel();
+					readerUI = ReaderBaseFrame(RootContainer);
 
 					readerModel.init(function(data){
 						readerUI(data)
@@ -662,6 +664,7 @@
 					//todo 实现和阅读器相关的数据交互的方法
 
 					var Chapter_id;
+					var ChapterTotal;
 					var init = function(UIcallback) {
 						getFictionInfo(function(){
 							getCurChapterContent(Chapter_id, function(data){
@@ -674,6 +677,7 @@
 						$.get('data/chapter.json',function(data){
 							//todo 获得章节信息之后的回掉
 							Chapter_id = data.chapters[1].chapter_id;
+							ChapterTotal = data.chapters.length;
 							callback && callback();
 						},'json');
 					}
@@ -687,9 +691,29 @@
 							}
 						},'json')
 					}
+					var prevChapter = function(UIcallback){
+							chapter_id = parseInt(Chapter_id,10);
+							if(Chapter_id == 1) {
+								return
+							}
+							Chapter_id -= 1;
+							getCurChapterContent(Chapter_id,UIcallback)
+					};
+
+					var nextChapter = function(UIcallback){
+							chapter_id = parseInt(Chapter_id,10);
+							if(Chapter_id == ChapterTotal) {
+								alert(1)
+								return
+							}
+							Chapter_id += 1;
+							getCurChapterContent(Chapter_id,UIcallback)
+					}
 
 					return {
-						init: init
+						init: init,
+						prevChapter: prevChapter,
+						nextChapter: nextChapter
 					}
 				}
 
@@ -771,8 +795,22 @@
 						Dom.bottom_nav.hide();
 						Dom.top_nav.hide();
 						Dom.font_container.hide();
-						/*	Dom.font_button.removeClass('current')*/
+						Dom.font_button.removeClass('current')
 					})
+
+					$('#prev_button').click(function(){
+						//todo 获得章节的翻页数据 》 渲染数据
+						readerModel.prevChapter(function(data){
+							readerUI(data)
+						});
+
+					});
+
+					$('#next_button').click(function(){
+						readerModel.nextChapter(function(data){
+							readerUI(data)
+						});
+					});
 				}
 
 				main()
