--- a/index.html
+++ b/index.html
@@ -676,7 +676,10 @@
 					var getFictionInfo = function(callback){
 						$.get('data/chapter.json',function(data){
 							//todo 获得章节信息之后的回掉
-							Chapter_id = data.chapters[1].chapter_id;
+							Chapter_id = Util.StorageGetter('last_chapter_id');
+							if(Chapter_id == null){
+								Chapter_id = data.chapters[1].chapter_id;
+							}
 							ChapterTotal = data.chapters.length;
 							callback && callback();
 						},'json');
@@ -697,17 +700,18 @@
 								return
 							}
 							Chapter_id -= 1;
-							getCurChapterContent(Chapter_id,UIcallback)
+							getCurChapterContent(Chapter_id,UIcallback);
+							Util.StorageSetter('last_chapter_id',Chapter_id)
 					};
 
 					var nextChapter = function(UIcallback){
 							chapter_id = parseInt(Chapter_id,10);
 							if(Chapter_id == ChapterTotal) {
-								alert(1)
 								return
 							}
 							Chapter_id += 1;
-							getCurChapterContent(Chapter_id,UIcallback)
+							getCurChapterContent(Chapter_id,UIcallback);
+							Util.StorageSetter('last_chapter_id',Chapter_id)
 					}
 
 					return {
