--- a/index.html
+++ b/index.html
@@ -601,6 +601,7 @@
 
 		<script>
 			(function(){
+				'use strict';
 				var Util = (function(){
 					var prefix ='html5_reader_';
 					var StorageGetter = function(key){
@@ -666,13 +667,22 @@
 					var Chapter_id = null;
 					var ChapterTotal;
 					var init = function(UIcallback) {
-						getFictionInfo(function(){
+
+						//@@
+						/*getFictionInfo(function(){
 							getCurChapterContent(Chapter_id, function(data){
 								//todo
 								UIcallback && UIcallback(data);
 							});
+						})*/
+						getFictionInfoPromise().then(function(d){
+							return getCurChapterContentPromise();
+						}).then(function(data){
+							UIcallback && UIcallback(data);
 						})
 					}
+
+					//@@
 					var getFictionInfo = function(callback){
 						$.get('data/chapter.json',function(data){
 							//todo 获得章节信息之后的回掉
@@ -687,6 +697,31 @@
 							callback && callback();
 						},'json');
 					}
+ 					
+ 					var getFictionInfoPromise =  function(){
+	 					return new Promise(function(resolve, reject){
+	 						$.get('data/chapter.json',function(data){
+								//todo 获得章节信息之后的回掉
+								if(data.result == 0) {
+									Chapter_id = Util.StorageGetter('last_chapter_id');
+									Chapter_id = Number(Chapter_id);
+									if(Chapter_id == null) {
+										Chapter_id = data.chapters[1].chapter_id;
+									} else if(Chapter_id > 4) {
+										Chapter_id = data.chapters[1].chapter_id;
+									}
+									ChapterTotal = data.chapters.length;
+									resolve()
+								} else {
+									reject()
+								}
+								
+							},'json');
+	 					})
+	 				}
+
+
+	 				//@@
 					var getCurChapterContent = function(chapter_id,callback){
 						$.get('data/data' + chapter_id + '.json', function(data){
 							if(data.result == 0) {
@@ -697,8 +732,24 @@
 							}
 						},'json')
 					}
+
+					var getCurChapterContentPromise = function(){
+						return new Promise(function(resolve,reject){
+							$.get('data/data' + Chapter_id + '.json', function(data){
+								if(data.result == 0) {
+									var url = data.jsonp;
+									Util.getJSONP(url,function(data){
+										resolve(data)
+									})
+								} else {
+									reject({msg:'fail'});
+								}
+							},'json')
+						})
+					}			
+
 					var prevChapter = function(UIcallback){
-							chapter_id = parseInt(Chapter_id,10);
+							Chapter_id = parseInt(Chapter_id,10);
 							if(Chapter_id == 1) {
 								return
 							}
@@ -708,7 +759,7 @@
 					};
 
 					var nextChapter = function(UIcallback){
-							chapter_id = parseInt(Chapter_id,10);
+							Chapter_id = parseInt(Chapter_id,10);
 							if(Chapter_id == ChapterTotal) {
 								return
 							}
